language_tests/outputs/invalid/deref_noncopy_from_borrow.out
error: cannot move out of borrowed content
 -> language_tests/source_files/invalid/deref_noncopy_from_borrow.tr:6:4
	    *x
	    ^^
